--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a {
 .main-grid {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 2rem 1fr 1fr;
+    grid-template-rows: 2rem auto auto;
     grid-auto-rows: 1fr;
     gap: 10px 10px;
     grid-auto-flow: row;
