--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,9 @@ select {
 }
 
 .book-button {
-    width: 40%;
     padding: 0.5rem;
+    background-color: #eee;
+    border-radius: 0.5rem;
 }
 
 .search-button {
@@ -264,6 +265,10 @@ select {
     font-size: x-small;
 }
 
+.bold-text {
+    font-weight: bold;
+}
+
 .no-results {
     font-weight: bold;
     font-size: large;
@@ -271,4 +276,50 @@ select {
 
 .car-info > img {
     padding: 0.5rem;
+}
+
+#customerform {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.accessories-grid {
+    display: flex;
+    justify-content: space-between;
+}
+
+.customer-flex,
+.receipt-flex {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.accessories-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.total-flex {
+    display: flex;
+    flex-direction: column;
+}
+
+.accessories-total {
+    display: flex;
+    align-items: end;
+}
+
+.acc-submit-button {
+    padding: 0.5rem;
+}
+
+@media print {
+    .no-print {
+    display: none;
+}
 }
