--- a/css/style.css
+++ b/css/style.css
@@ -219,11 +219,6 @@ a {
     grid-area: box-title;
 }
 
-select,
-input {
-    width: 13rem;
-}
-
 select {
     border-radius: 0;
     background-color: #fff;
@@ -291,8 +286,13 @@ select {
 }
 
 .accessories-grid {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+}
+
+.accessories-output {
+  border: 1px solid #000;
 }
 
 .customer-flex,
@@ -309,6 +309,10 @@ select {
     flex-direction: column;
 }
 
+.accessories-form input {
+  margin: 0.2rem;
+}
+
 .total-flex {
     display: flex;
     flex-direction: column;
@@ -317,6 +321,7 @@ select {
 .accessories-total {
     display: flex;
     align-items: end;
+    justify-content: center;
 }
 
 .acc-submit-button {
@@ -333,6 +338,7 @@ select {
 Source: https://codepen.io/maxym11/pen/dyGEzay */
 
 @import url("https://fonts.googleapis.com/css?family=Poppins|Lato|Roboto+Mono&display=swap");
+
 .about-us-body {
   width: 100vw;
   height: 100vh;
@@ -355,10 +361,12 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  margin-right: 12rem;
 }
+
 #carousel-wrapper #menu {
-  height: 380px;
-  width: 720px;
+  height: 38rem;
+  width: 40rem;
   overflow: hidden;
   font-weight: 700;
   line-height: 1;
@@ -369,6 +377,7 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
   vertical-align: middle;
   transition: all 0.6s ease-in-out;
 }
+
 #carousel-wrapper #menu #current-option {
   position: relative;
   width: 100%;
@@ -380,47 +389,52 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
   justify-content: center;
   overflow: hidden;
 }
+
 #carousel-wrapper #menu #current-option #current-option-text1 {
   font-size: 3rem;
   line-height: 3rem;
-  width: 220px;
-  height: 200px;
+  width: 120px;
+  height: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
 #carousel-wrapper #menu #current-option #current-option-text1::before {
   content: attr(data-next-text);
   position: absolute;
-  transform: translate(0%, 380px);
+  transform: translate(0%, 388px);
   width: 100%;
-  height: 200px;
+  height: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
 #carousel-wrapper #menu #current-option #current-option-text1::after {
   content: attr(data-previous-text);
   position: absolute;
-  transform: translate(0%, -380px);
+  transform: translate(0%, -388px);
   width: 100%;
-  height: 200px;
+  height: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
 #carousel-wrapper #menu #current-option #current-option-text2 {
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   width: 220px;
   height: 40px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
+  align-items: center;
+  justify-content: flex-start;
 }
+
 #carousel-wrapper #menu #current-option #current-option-text2::before {
   content: attr(data-next-text);
   position: absolute;
@@ -429,9 +443,10 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
   height: 40px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
+  align-items: center;
+  justify-content: flex-start;
 }
+
 #carousel-wrapper #menu #current-option #current-option-text2::after {
   content: attr(data-previous-text);
   position: absolute;
@@ -440,9 +455,10 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
   height: 40px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
+  align-items: center;
+  justify-content: flex-start;
 }
+
 #carousel-wrapper #menu #previous-option {
   width: 1.5rem;
   height: 1.5rem;
@@ -452,8 +468,9 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
   background: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 256 256'%3E%3Cpolygon points='225.813,48.907 128,146.72 30.187,48.907 0,79.093 128,207.093 256,79.093' fill='%23333'%3E%3C/polygon%3E%3C/svg%3E");
   background-size: cover;
   position: absolute;
-  transform: translate(310px, 50px);
+  transform: translate(31rem, 5rem);
 }
+
 #carousel-wrapper #menu #next-option {
   width: 1.5rem;
   height: 1.5rem;
@@ -463,54 +480,68 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
   background: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 256 256'%3E%3Cpolygon points='225.813,48.907 128,146.72 30.187,48.907 0,79.093 128,207.093 256,79.093' fill='%23333'%3E%3C/polygon%3E%3C/svg%3E");
   background-size: cover;
   position: absolute;
-  transform: translate(310px, -50px) rotate(180deg);
+  transform: translate(31rem, -5rem) rotate(180deg);
 }
+
 #carousel-wrapper #image {
-  height: 240px;
-  width: 240px;
+  height: 28rem;
+  width: 28rem;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 101;
   position: absolute;
-  transform: translate(140px, 0);
+  transform: translate(14rem, 0);
 }
+
 #carousel-wrapper.anim-next {
   pointer-events: none;
 }
+
 #carousel-wrapper.anim-next #current-option-text1 {
   animation: next-text 0.65s 0.085s;
 }
+
 #carousel-wrapper.anim-next #current-option-text2 {
   animation: next-text 0.65s 0.085s;
 }
+
 #carousel-wrapper.anim-next #previous-option {
   animation: next-top-arrow 0.65s 0.085s;
 }
+
 #carousel-wrapper.anim-next #next-option {
   animation: next-bottom-arrow 0.65s 0.085s;
 }
+
 #carousel-wrapper.anim-next #image {
-  animation: next-image 0.65s 0.085s;
+  animation: next-image 0.65s 0.085s; 
 }
+
 #carousel-wrapper.anim-previous {
   pointer-events: none;
 }
+
 #carousel-wrapper.anim-previous #current-option-text1 {
   animation: previous-text 0.65s 0.085s;
 }
+
 #carousel-wrapper.anim-previous #current-option-text2 {
   animation: previous-text 0.65s 0.085s;
 }
+
 #carousel-wrapper.anim-previous #previous-option {
   animation: previous-top-arrow 0.65s 0.085s;
 }
+
 #carousel-wrapper.anim-previous #next-option {
   animation: previous-bottom-arrow 0.65s 0.085s;
 }
+
 #carousel-wrapper.anim-previous #image {
   animation: previous-image 0.65s 0.085s;
 }
+
 @keyframes previous-text {
   50%, 55% {
     transform: translate(0%, 390px);
@@ -519,16 +550,40 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
     transform: translate(0%, 380px);
   }
 }
+
+@keyframes previous-text-q {
+  50%, 55% {
+    transform: translate(0%, -9px);
+  }
+  to {
+    transform: translate(0%, -8px);
+  }
+}
+
 @keyframes previous-top-arrow {
   50% {
     transform: translate(310px, 53px);
   }
 }
+
+/* @keyframes previous-top-arrow-q {
+  50% {
+    transform: translate(310px, 53px);
+  }
+} */
+
 @keyframes previous-bottom-arrow {
   50% {
     transform: translate(310px, -47px) rotate(180deg);
   }
 }
+
+/* @keyframes previous-bottom-arrow-q {
+  50% {
+    transform: translate(310px, -47px) rotate(180deg);
+  }
+} */
+
 @keyframes previous-image {
   0% {
     transform: translate(140px, 0) scale(1);
@@ -543,6 +598,22 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
     opacity: 1;
   }
 }
+
+@keyframes previous-image-q {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  70% {
+    transform: scale(1.1);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 @keyframes next-text {
   50%, 55% {
     transform: translate(0%, -390px);
@@ -551,16 +622,40 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
     transform: translate(0%, -380px);
   }
 }
+
+@keyframes next-text-q {
+  50%, 55% {
+    transform: translate(0%, -9px);
+  }
+  to {
+    transform: translate(0%, -8px);
+  }
+} 
+
 @keyframes next-top-arrow {
   50% {
     transform: translate(310px, 47px);
   }
 }
+
+/* @keyframes next-top-arrow-q {
+  50% {
+    transform: translate(310px, 47px);
+  }
+} */
+
 @keyframes next-bottom-arrow {
   50% {
     transform: translate(310px, -53px) rotate(180deg);
   }
 }
+
+/* @keyframes next-bottom-arrow-q {
+  50% {
+    transform: translate(310px, -53px) rotate(180deg);
+  }
+} */
+
 @keyframes next-image {
   0% {
     transform: translate(140px, 0) scale(1);
@@ -573,5 +668,143 @@ Source: https://codepen.io/maxym11/pen/dyGEzay */
   100% {
     transform: translate(140px, 0) scale(1);
     opacity: 1;
+  }
+}
+
+@keyframes next-image-q {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  70% {
+    transform: scale(1.1);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  #carousel-wrapper {
+    margin-right: 0;
+  }
+
+  #carousel-wrapper #image {
+    transform: translate(0, 0);
+  }
+
+  #carousel-wrapper #menu #current-option {
+    transform: translate(0%, 0%);
+    flex-direction: row;
+    align-items: unset;
+    justify-content: space-between;
+  }
+
+  #carousel-wrapper #menu #previous-option {
+    transform: translate(16rem, 5rem);
+  }
+  
+  #carousel-wrapper #menu #next-option {
+    transform: translate(16rem, -5rem) rotate(180deg);
+  }
+
+  #carousel-wrapper #menu #current-option #current-option-text1 {
+    width: unset;
+  }
+  
+  #carousel-wrapper #menu #current-option #current-option-text1::before {
+    content: attr(data-next-text);
+    position: absolute;
+    transform: translate(0%, 380px);
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #carousel-wrapper #menu #current-option #current-option-text1::after {
+    content: attr(data-previous-text);
+    position: absolute;
+    transform: translate(0%, -380px);
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #carousel-wrapper #menu #current-option #current-option-text2 {
+    width: unset;
+    flex-direction: row;
+    justify-content: unset;
+  }
+  
+  #carousel-wrapper #menu #current-option #current-option-text2::before {
+    content: attr(data-next-text);
+    position: absolute;
+    transform: translate(0%, 388px);
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  
+  #carousel-wrapper #menu #current-option #current-option-text2::after {
+    content: attr(data-previous-text);
+    position: absolute;
+    transform: translate(0%, -388px);
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  
+  #carousel-wrapper.anim-next #current-option-text1 {
+    animation: next-text-q 0.65s 0.085s;
+  }
+  
+  #carousel-wrapper.anim-next #current-option-text2 {
+    animation: next-text-q 0.65s 0.085s;
+  }
+  
+  #carousel-wrapper.anim-next #previous-option {
+    animation: next-top-arrow-q 0.65s 0.085s;
+  }
+  
+  #carousel-wrapper.anim-next #next-option {
+    animation: next-bottom-arrow-q 0.65s 0.085s;
+  }
+  
+  #carousel-wrapper.anim-next #image {
+    animation: next-image-q 0.65s 0.085s; 
+  }
+  
+  #carousel-wrapper.anim-previous #current-option-text1 {
+    animation: previous-text-q 0.65s 0.085s;
+  }
+  
+  #carousel-wrapper.anim-previous #current-option-text2 {
+    animation: previous-text-q 0.65s 0.085s;
+  }
+  
+  #carousel-wrapper.anim-previous #previous-option {
+    animation: previous-top-arrow-q 0.65s 0.085s;
+  }
+  
+  #carousel-wrapper.anim-previous #next-option {
+    animation: previous-bottom-arrow-q 0.65s 0.085s;
+  }
+  
+  #carousel-wrapper.anim-previous #image {
+    animation: previous-image-q 0.65s 0.085s;
   }
 }
