--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,17 @@ select {
     border-radius: 0.5rem;
 }
 
+.home-button {
+    padding: 1rem;
+    background-color: #eee;
+    border-radius: 0.5rem;
+    border: 1px solid #000;
+    width: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .search-button {
     width: 40%;
     padding: 0.5rem;
